fixed cd function